# mycelium-runtime

./: CHANGELOG.md  CROSS-REF.md  Cargo.toml  README.md
crates/mycelium-cert/: Cargo.toml
crates/mycelium-cert/src/: lib.rs  mode.rs  store.rs
crates/mycelium-cert/tests/: check.rs  conformance.rs  mode.rs  mutant_witnesses.rs  sizing.rs  store.rs  swap.rs
crates/mycelium-diag/: Cargo.toml
crates/mycelium-diag/src/: lib.rs  tests.rs
crates/mycelium-interp/: Cargo.toml  README.md
crates/mycelium-interp/src/: lib.rs  parallel.rs  prims.rs  wild.rs
crates/mycelium-interp/src/tests/: mod.rs  prims.rs  wild.rs
crates/mycelium-interp/tests/: golden.rs  prim_table.rs
crates/mycelium-rt-abi/: Cargo.toml
crates/mycelium-sched/: Cargo.toml
crates/mycelium-select/: Cargo.toml
crates/mycelium-vsa-decode/: Cargo.toml
docs/spec/schemas/: README.md  bound.schema.json  guarantee.schema.json  meta.schema.json  mycelium-proj.schema.json  nodule-header.schema.json  physical-layout.schema.json  policy.schema.json  provenance.schema.json  reconstruction-manifest.schema.json  repr.schema.json  swap-certificate.schema.json  value.schema.json
docs/spec/schemas/examples/bound/invalid/: error-bad-norm.json  error-no-basis.json  prob-out-of-range.json
docs/spec/schemas/examples/bound/valid/: capacity-proven.json  error-empirical.json
docs/spec/schemas/examples/guarantee/invalid/: not-in-lattice.json
docs/spec/schemas/examples/guarantee/valid/: proven.json
docs/spec/schemas/examples/meta/invalid/: declared-claims-proven-basis.json  exact-with-bound.json
docs/spec/schemas/examples/meta/valid/: exact-no-bound.json  proven-capacity.json
docs/spec/schemas/examples/mycelium-proj/invalid/: bad-kind.json  missing-kind.json  unknown-project-key.json
docs/spec/schemas/examples/mycelium-proj/valid/: phylum.json  script.json
docs/spec/schemas/examples/nodule-header/invalid/: bad-deprecated-type.json  bad-version.json  unknown-key.json
docs/spec/schemas/examples/nodule-header/valid/: deprecated-reason.json  root.json  subnodule.json
docs/spec/schemas/examples/physical-layout/invalid/: tritpacked-no-scheme.json  unknown-scheme.json
docs/spec/schemas/examples/physical-layout/valid/: binary-words.json  tritpacked-tl2.json
docs/spec/schemas/examples/policy/invalid/: no-candidates.json  not-explainable.json
docs/spec/schemas/examples/policy/valid/: swap-target.json
docs/spec/schemas/examples/provenance/invalid/: bad-hash.json  derived-no-op.json
docs/spec/schemas/examples/provenance/valid/: derived.json  root.json
docs/spec/schemas/examples/reconstruction-manifest/invalid/: compositional-no-recipe.json  no-bound.json
docs/spec/schemas/examples/reconstruction-manifest/valid/: compositional.json  indexed-retrieval.json
docs/spec/schemas/examples/repr/invalid/: binary-no-width.json  unknown-kind.json
docs/spec/schemas/examples/repr/valid/: binary8.json  vsa-sparse.json
docs/spec/schemas/examples/swap-certificate/invalid/: bijective-no-lemma.json  no-policy.json
docs/spec/schemas/examples/swap-certificate/valid/: bijective-bin-tern-emitted.json  bijective-bin-tern.json  bounded-f32-bf16.json
docs/spec/schemas/examples/value/invalid/: no-meta.json
docs/spec/schemas/examples/value/valid/: binary-const.json  dense-const.json  ternary-const.json  vsa-proven-capacity.json
