[package]
name = "mycelium-diag"
version.workspace = true
description = "Canonical RFC-0013 structured-diagnostic record types — the failure-legibility substrate (Diag/Severity/Locus/Trace/Code); the small audited kernel std.diag/std.recover/std.testing consume (M-510)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[dev-dependencies]
