[package]
name = "mycelium-sched"
version.workspace = true
description = "mycelium-sched — the foundational work-stealing OS-thread Scheduler (M-709/M-861), relocated below mycelium-interp so the interpreter can consume it without a interp<->std-runtime dependency cycle."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Only for GuaranteeStrength (the scheduler's per-guarantee honesty tags, VR-5). No other
# mycelium-core surface is used here — kept minimal so this crate stays foundational (no cycle
# with mycelium-interp, which depends on this crate).
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }

[dev-dependencies]
# Property-based testing for the RT2 sequentialization + liveness + backpressure differentials.
proptest = "1"
